compiler/tests/success/subarrays/risc-v/global.jazz
// reg ptr of global

u32[2] g = {1, 2};

export fn main () -> reg u32 {
  reg ptr u32[2] r;
  reg u32 res;

  r = g; // LA
  res = r[0];

  return res;
}
